2013-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve handling of global variables in addition (and prepare for subtraction).
	* sim/ucsim/stm8.src/inst.cc:
	  Code cleanup.

2013-09-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/reg51.h: fall back to 8052.h
	* doc/sdccman.lyx: pragma exclude bits
	* src/mcs51/gen.c (genFunction, genEndFunction): applied patch 193 for
	  pragma exclude bits
	* src/port.h: maxextalign warning fixed
	* src/SDCCglobl.h: define true and false for MSVC
	* src/stm8/gen.c (genCmp): fixed warning
	* src/stm8/ralloc2.cc (Ainst_ok): fixed warning

2013-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Enable warning for non-connected live-ranges.

2013-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/stm8/gen.c,
	  support/regression/tests/bug-2222.c:
	  Fix bugs #2222, 2223.

2013-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/SDCClrange.c:
	  Check more carefully for undead hiding among the living variables.

2013-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/astlcs90,
	  Makefile.common.in,
	  Makefile.in,
	  configure.in:
	  Integrate Rainer Keuchel's TLCS-90 assembler.

2013-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Remove redundant jumps.

2013-09-22 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/lib/pic14/configure.in,
	  device/non-free/lib/pic14/configure,
	  device/non-free/lib/pic16/supported-devices.ac,
	  device/non-free/lib/pic16/configure,
	  device/lib/pic16/configure: fixed bash dependencies

2013-09-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient stack adjustment when optimizing for code size.

2013-09-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genEndFunction): applied patch 207 to fix bug 2221,
	  Thanks Alex Burton!
	* support/regression/tests/bug-2221.c: new, added
