@@ -1026,7 +1026,7 @@ replace restart {
 	jp	%3,%4
 	; peephole 82 removed load by replacing sub with cp
 	assert	a=%1
-} if notVolatile(%1)
+} if notVolatile(%1), notUsedFrom(%4 'a')
 
 replace restart {
 	assert	a=%1
@@ -1038,7 +1038,7 @@ replace restart {
 	jp	%3,%4
 	; peephole 83 removed load by replacing sub with cp
 	assert	a=%1
-}
+} if notUsedFrom(%4 'a')
 
 replace restart {
 	assert	a=%1
